Dodao ucitavnje opencv biblioteke i spojio sa kamerom da mozemo uzimati frejm po frejm i transfomisati

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,13 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
+    <!-- Needed permissions for the camera -->
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera" android:required="false"/>
+    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
+    <uses-feature android:name="android.hardware.camera.front" android:required="false"/>
+    <uses-feature android:name="android.hardware.camera.front.autofocus" android:required="false"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
