--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="libs/neuroph-adapters-2.9.jar"/>
+	<classpathentry kind="lib" path="libs/neuroph-contrib-2.9.jar"/>
+	<classpathentry kind="lib" path="libs/neuroph-core-2.9.jar"/>
+	<classpathentry kind="lib" path="libs/neuroph-imgrec-2.9.jar"/>
+	<classpathentry kind="lib" path="libs/neuroph-ocr-2.9.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-api-1.7.5.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-nop-1.7.6.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
