--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../OpenCV-android-sdk/sdk/java
+android.library.reference.1=../OpenCV-3.0.0-android-sdk-1/OpenCV-android-sdk/sdk/java
